<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tekenscanner</string>
    <string name="title">TEKENSCANNER</string>
    <string name="sub_title">Ontdek het aantal teken in jouw buurt,\nmeld zelf een teek en vraag
        onderzoek aan.
    </string>
    <string name="splash_bottom_text">JE SPEELT TOCH NIET MET DE GEZONDHEID VAN JE HUISDIER?
    </string>
    <string name="text_akkoord">akkoord</string>
    <string name="disclaimer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        \n \nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum
        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
        culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. \n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat, Duis aute irure dolor in reprehenderit in voluptate
        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in cupla qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="back">VORIGE</string>
    <string name="next">VOLGENDE</string>
    <string name="step_1_text">Bekijk het aantal gemelde teken in \njouw omgeving op de
        Tekenscanner.
    </string>
    <string name="action_close">Close</string>
    <string name="profile_setup_title">Helpschermen</string>
    <string name="profile_details_title">MIJN GEGEVENS</string>
    <string name="radio_button_title_male">Meneer</string>
    <string name="radio_button_title_female">Mevrouw</string>
    <string name="first_name_placeholder">Voornaam</string>
    <string name="last_name_placeholder">Achternaam</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Wachtwoord</string>
    <string name="confirm_password_placeholder">Nogmaals het wachtwoord</string>
    <string name="street_name_placeholder">Straat en huisnummer</string>
    <string name="postal_code_placeholder">Postcode</string>
    <string name="place_placeholder">Plaats</string>
    <string name="mobile_number_placeholder">Telefoonnummer</string>
    <string name="agree_terms_conditions">Ik ga akkoord met de</string>
    <string name="condtions_text">
        <u>voorwaarden</u>
    </string>
    <string name="my_pet_title">MIJN HUISDIEREN</string>
    <string name="add_new_pet_placeholder">Nieuw huisdier toevoegen</string>
    <string name="add_new_pet_title">MIJN HUISDIEREN</string>
    <string name="wait">Loading Profiel</string>
    <string name="conditions_title">Voorwaarden</string>
    <string name="conditions_text">Hierbij geef ik Bayer B.V. (Energieweg 1, 3641 RT Mijdrecht,
        Nederland) toestemming om mijn persoonlijke gegevens (namelijk mijn naam, adres,
        woonplaats, e-mailadres, (mobiel) telefoonnummer) te verzamelen, verwerken en gebruiken voor
        statistische, communicatie en marketing doeleinden en om mij te voorzien
        van gepersonaliseerde diensten.\nIk ga er hierbij mee akkoord dat Bayer B.V. mijn
        bovengenoemde persoonlijke gegevens voor dit doeleinde mag doorgeven naar externe
        dienstverleners. Ik ga hierbij akkoord dat
        mijn persoonlijke gegevens mogen worden doorgegeven, verwerkt en gebruikt in landen waar het
        niveau van data protectie niet als adequaat is aangemerkt door de Europese Commissie.\n
        Ik ben mij ervan bewust dat ik meer informatie kan krijgen over de verwerking van
        persoonsgegevens, of kan vragen naar wijziging of verwijdering van mijn persoonsgegevens.
        Het staat me vrij
        om mijn toestemming op elk moment in te trekken met toekomstig effect. Enig verzoek of een
        verklaring van intrekking kan worden geadresseerd aan
    </string>
    <string name="conditions_web_link">dataprivacy.nl@bayer.com.</string>
    <string name="add_photo_text">Voeg een foto toe</string>
    <string name="what_is_your_pet_name">Wat is de naam van jouw huisdier?</string>
    <string name="is_it_dog_or_cat">Is het een hond of kat?</string>
    <string name="what_is_the_breed">Wat is het ras?</string>
    <string name="date_of_birth">Wat is de geboortedatum</string>
    <string name="what_is_the_gender">Wat is het geslacht</string>
    <string name="what_is_the_weight">Wat is het gewicht (kg)?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_cat">Kater</string>
    <string name="female_cat">Poes</string>
    <string name="male_dog">Reu</string>
    <string name="female_dog">Teef</string>
    <string name="second_list_title">ONDERZOEKEN</string>
    <string name="bottom_result_text">Er staat een uitslag klaar</string>
    <string name="dummy_text">Secondary text Lorem ipsum dolor sit amet, consectetuer adipiscing
        elit. Nam massa quam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </string>
    <string name="product_details_title">Bestrijding en preventie van vlooien en luizen bij de
        hond
    </string>
    <string name="product_details_description">Advantage® is een snelwerkend middel dat vlooien en
        luizen doodt. De toediening is eenvoudig: u druppelt de inhoud van de pipet tussen de haren
        van je hond op de intacte huid.
    </string>
    <string name="button_text_more_information">MEER INFORMATIE</string>
    <string name="main_activity_title">Teek melden</string>
    <string name="text_tab1">Tekenscanner</string>
    <string name="text_tab2">Profiel</string>
    <string name="text_tab3">Teek melden</string>
    <string name="text_tab4">Onderzoek</string>
    <string name="text_tab5">Product</string>
    <string name="login_top_text">Met een Bayer Petcare account kan je een gratis tekenonderzoek
        aanvragen voor jouw hond of kat.
    </string>
    <string name="login_email_text">E-mail:</string>
    <string name="login_password_text">Wachtwoord:</string>
    <string name="forgot_password_text">
        <u>Wachtwoord vergeten</u>
    </string>
    <string name="login_button_text">INLOGGEN</string>
    <string name="dont_have_account_text">
        <u>Ik heb nog geen BayerPetCare account</u>
    </string>
    <string name="invalid_login">Email or Password incorrect</string>
    <string name="error">Error</string>
    <string name="login">Inloggen..</string>
    <string name="report_step1_title">TOELICHTING</string>
    <string name="report_step1_detail_text">Duid op de kaart aan waar je de teek hebt gevonden.\n\n
        Daarna kan je ook een onderzoek aanvragen om te
        zien of de teek besmet is met een ziekte.
    </string>
    <string name="report_step1_botton_text">VOLGENDE</string>
    <string name="report_step2_title">TOELICHTING</string>
    <string name="report_step2_detail_text">Zit de teek op jouw hond of kat?</string>
    <string name="report_step2_botton1_text">HOND</string>
    <string name="report_step2_botton2_text">KAT</string>
    <string name="report_step2_botton3_text">ANDERS</string>
    <string name="report_step3_title">TOELICHTING</string>
    <string name="report_step3_detail_text">Let op! \n\nJe kunt enkel meldingen maken van teken die
        op honden of katten zitten / hebben gezeten.
    </string>
    <string name="report_step3_botton_text">VORIGE</string>
    <string name="report_step4_title">TEEK MELDEN</string>
    <string name="report_step4_detail_text">Waar denk je dat jouw hond de teek heeft opgelopen?
    </string>
    <string name="report_step4_botton1_text">OP MIJN HUIDIGE LOCATIE</string>
    <string name="report_step4_botton2_text">OP EEN ANDERE LOCATIE</string>
    <string name="report_step5_title">TEEK MELDEN</string>
    <string name="report_step5_detail_text">Waar denkt je dat jouw kat de teek heeft opgelopen?
    </string>
    <string name="report_step5_botton1_text">OP MIJN HUIDIGE LOCATIE</string>
    <string name="report_step5_botton2_text">OP EEN ANDERE LOCATIE</string>
    <string name="qr_scanner_title">CODE INVOEREN</string>
    <string name="qr_scanner_detail_text">Scan hier de code die op \nde brief staat.</string>
    <string name="qr_scanner_botton1_text">VERSTUREN</string>
    <string name="qr_scanner_botton2_text">IK HEB GEEN CODE</string>
    <string name="test_kit_step2_detail_text">Voor welk dier wil je een onderzoek aanvragen?
    </string>
    <string name="filter_option_title">Bekijk de tekenscanner per week</string>
    <string name="text_tekenscanner_tab1">TEEKINTENSITEIT M2</string>
    <string name="text_tekenscanner_tab2">FILTERS</string>
    <string name="jan">jan</string>
    <string name="feb">feb</string>
    <string name="mar">mrt</string>
    <string name="apr">apr</string>
    <string name="may">mei</string>
    <string name="jun">jun</string>
    <string name="jul">jul</string>
    <string name="aug">aug</string>
    <string name="sep">sep</string>
    <string name="oct">okt</string>
    <string name="nov">nov</string>
    <string name="dec">dec</string>
    <string name="hint_search_bar">Herinkhave 12,1234 AB Amsterdam</string>
    <string name="action_filter">Filter</string>
    <string name="filter_option_toolbar_text">Tekenscanner</string>
    <string name="text_filter_option_info">De teek kan besmet zijn\n met 4 verschillende ziekten.\n
        Alle vier de ziekten kunnen\n worden overgedragen op\n hond of kat.
    </string>
    <string name="more_info">Meer informatie</string>
    <string name="filter_option_info_title">TOELICHTING</string>
    <string name="filter_option_1">Ziekte van Lyme</string>
    <string name="filter_option_2">Babesiosis of tekenkoorts</string>
    <string name="filter_option_3">Anaplasmosis</string>
    <string name="filter_option_4">Ehrlechiosis</string>
    <string name="more_info_heading">Uitslag</string>
    <string name="more_info_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        \n\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in cupla qui
        officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. \n\nUt enim ad
        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
        fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in cupla qui
        officia deserunt mollit anim id est laborum.
    </string>
    <string name="more_info_title">Meer informatie</string>
    <string name="title_tips">Titel Tips</string>
    <string name="title_research">Onderzoek</string>
    <string name="title_research_outcome">Uitslag onderzoek</string>
    <string name="text_onderzoek_tab1">HOND</string>
    <string name="text_onderzoek_tab2">KAT</string>
    <string name="onderzoek_tab1_head">TIPS EN ADVIES</string>
    <string name="no_items">Geen items</string>
    <string name="tip_title">Tip</string>
    <string name="action_save">Done</string>
    <string name="action_customize">Aanpassen</string>
    <string name="action_change_pwd">Wachtwoord wijzigen</string>
    <string name="action_logout">Uitloggen</string>
</resources>