<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/splash_default_margin">

        <tekkan.synappz.com.tekkan.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:textColor="@color/profile_title_color"
            android:text="@string/profile_details_title"
            app:customfont="OpenSansSemiBold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/user_profile_padding">


            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_group_margin_top"
                android:background="@drawable/bg_bottom_line"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_default_text_size"
                    android:textColor="@color/profile_default_text_color"
                    android:buttonTint="@color/radio_button_tint"
                    android:text="@string/radio_button_title_male"

                    />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/profile_default_text_size"
                    android:textColor="@color/profile_default_text_color"
                    android:buttonTint="@color/radio_button_tint"
                    android:text="@string/radio_button_title_female"

                    />
            </RadioGroup>

            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_bottom_line"
                android:hint="@string/first_name_placeholder" />


            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/bg_bottom_line"
                android:hint="@string/last_name_placeholder"

                />



            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/email_placeholder"

                />

            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/password_placeholder"

                />


            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/confirm_password_placeholder"

                />

            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/street_name_placeholder"

                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:orientation="horizontal"
                android:weightSum="2">

                <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/postal_code_placeholder"

                    />

                <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/place_placeholder"

                    />
            </LinearLayout>

            <tekkan.synappz.com.tekkan.custom.CustomFontEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/mobile_number_placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_edit_text_height"
                android:background="@drawable/bg_bottom_line"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/checkbox_margin_left"
                android:orientation="horizontal">

                <tekkan.synappz.com.tekkan.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/agree_terms_conditions"
                    android:textSize="@dimen/profile_default_text_size" />

                <tekkan.synappz.com.tekkan.custom.CustomFontTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/user_profile_padding"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="@string/condtions_text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="@dimen/profile_default_text_size" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:buttonTint="@color/radio_button_tint"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>


        <tekkan.synappz.com.tekkan.custom.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/radio_group_margin_top"
            android:layout_height="wrap_content"
            app:customfont="OpenSansSemiBold"
            android:textColor="@color/profile_title_color"
            android:text="@string/add_new_pet_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_text_height"
            android:background="@drawable/bg_bottom_line"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/user_profile_padding"
            android:layout_marginTop="@dimen/my_pet_title_margin_top"
            >

            <tekkan.synappz.com.tekkan.custom.CustomFontTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/add_new_pet_placeholder"
                android:layout_weight="1"
                android:textSize="@dimen/profile_default_text_size"

                />
            <Button
                android:layout_width="@dimen/add_pet_button_height"
                android:layout_height="@dimen/add_pet_button_height"
                android:background="@drawable/ic_add_pet_button"
                android:layout_marginEnd="@dimen/add_pet_button_margin_right"

                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/add_new_pet_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/default_margin" />

    </LinearLayout>
</ScrollView>
