<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <tekkan.synappz.com.tekkan.custom.NonScrollingViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/color_bar"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/color_bottom_bar">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="0dp"
            app:tabSelectedTextColor="@color/selected_tab_color"
            app:tabTextAppearance="@style/TabTextStyle"
            app:tabTextColor="@color/default_tab_color">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bg_tab1"
                android:text="@string/text_tab1"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bg_tab2"
                android:text="@string/text_tab2"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bg_tab3"
                android:text="@string/text_tab3"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bg_tab4"
                android:text="@string/text_tab4"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/bg_tab5"
                android:text="@string/text_tab5"/>

        </android.support.design.widget.TabLayout>
    </FrameLayout>

</LinearLayout>